2002-05-23  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* getfacl.c (usage): Standardize usage output. Change return type to
	static void.
	(print_version): New function.
	(longopts): Added longopts for all options.
	(main): Accommodate new help and version options.

2002-05-22  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* mount.cc (version) New global variable.
	(usage) Standardize usage output.  Accomodate new version option.
	(print_version) New function.
	(longopts) Accomodate new version option.
	(opts) Ditto.
	(main) Ditto.

2002-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (usage): Change usage output slightly.

2002-05-20  Joerg Schaible <joerg.schaible@gmx.de>

	* cygpath.cc (main): Add option l to support conversion to   
	Windows long file names.  Refactured code for capital options.
	Support of options from file for capital options.
	(dowin): New function.  Refactured from main.
	(doit): Call long path conversion.
	(get_long_name): New function.
	(get_long_paths): New function.
	(get_long_path_name_w32impl): New function.  Reimplementation
	of Windows API function GetLongPathName (only 98/Me/2000/XP or  
	higher).
	(get_short_name): Call GetShortPathName only once.
	(get_short_paths): Fix calculating buffer size.
	* utils.sgml: Update cygpath section for l option.

2002-05-18  Christopher Faylor  <cgf@redhat.com>

	* strace.cc (add_child): Use calloc since new requires working
	libstdc++.a.
	(remove_child): Ditto for delete/free.

2002-05-15  Mark Blackburn  <marklist@fangorn.ca>

	* cygpath.cc (get_short_paths): Fix more error checking.
	(get_short_name): Ditto.

2002-05-14  Joerg Schaible <joerg.schaible@gmx.de>

	* cygpath.cc (main): Add option H to show the Windows' profiles
	directory.  Support short names for options DPSW.  Clean up
	copied code lines.
	* utils.sgml: Update cygpath section for H option and s support.

2002-05-14  Mark Blackburn  <marklist@fangorn.ca>
